# sumr

./: Makefile.am  bootstrap  configure.ac
src/: .gitignore  Makefile.am  sumr.c
